--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>About - Anshuman Shahu</title>
-  <link rel="stylesheet" href="styles/about.css" />
+  <link rel="stylesheet" href="about.css" />
   <script src="https://kit.fontawesome.com/a2e0e6a011.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -77,7 +77,7 @@
           </ul>
         </div>
       </div>
-      <button class="toggle-btn" onclick="toggleDarkMode()">Dark Mode</button>
+    
 
 <script>
   function toggleDarkMode() {
