--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 
       <!-- RIGHT: PROFILE IMAGE -->
       <div class="right-section">
-        <img src="images/anshuman.jpg" alt="Anshuman Shahu" class="profile-img" />
+        <img src="anshuman.jpg" alt="Anshuman Shahu" class="profile-img" />
       </div>
     </div>
   </div>
